package ar.edu.info.unlp.RedSocial;

public interface Component {

}
