package ar.edu.info.unlp.RedSocial;

public class Tweet {
    private String texto;

    public Tweet(String text) {
        text = text;
    }
}
